<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.example.riceyrq.personalmoneymanagerment.acitvity.fragment.AboutFragment">

    <include layout="@layout/toolbar"/>

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginTop="40dp"
        android:textSize="24sp"
        android:text="作者：" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="23sp"
        android:layout_marginTop="20dp"
        android:text="@string/hit"/>

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="23sp"
        android:layout_marginTop="20dp"
        android:text="@string/yangrq"/>

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="23sp"
        android:layout_marginTop="20dp"
        android:text="@string/zhangd"/>

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="23sp"
        android:layout_marginTop="20dp"
        android:text="@string/zhengl"/>

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="23sp"
        android:layout_marginTop="20dp"
        android:text="@string/panjz"/>



</LinearLayout>
